...
        </Text>
      ) : null}
      <Row spacing={12} alignment="center">
        <Button
          testID="report-cancel"
          variant="outlined"
          label="Cancel"
          disabled={isSubmitting}
          onPress={handleDismiss}
        />
        <Button
          testID="report-submit"
          variant="filled"
...
